# joplin2readeck

./: .env.example  Dockerfile  README.md  add_ex.py  compose.yaml  joplin2readeck-config.yaml  joplin2readeck-cron.yaml  joplin2readeck-pod.yaml  joplin2readeck-secret.yaml  note2read.py  pocket_token.py  publish_notes.py  pyproject.toml  requirements.txt
joplin-cli-server/: docker-compose.yml  joplin-cli-server.yaml  joplin-config.json
joplin-proxy/: .env.example  Dockerfile  compose.yaml  config.yaml  ingress.yaml  main.py  notes.py  pod.yaml  pyproject.toml  service.yaml
