[project]
name = "joplin-note-proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.120.0",
    "markdown2>=2.5.4",
    "requests>=2.32.5",
    "typing>=3.10.0.0",
    "uvicorn>=0.38.0",
]
