[project]
name = "joplin-note-proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleach>=6.2.0",
    "dotenv>=0.9.9",
    "fastapi>=0.120.0",
    "markdown-it-py>=4.0.0",
    "pillow>=12.0.0",
    "requests>=2.32.5",
    "typing>=3.10.0.0",
    "uvicorn>=0.38.0",
]
